Sending Mail to multiple-people

--- a/automated-mail.ipynb
+++ b/automated-mail.ipynb
@@ -28,12 +28,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiii \n",
+      "\tThis is AI msg.Inviting you for the seminar on AI @Hyd.\n",
+      "                  Thanking you.\n",
+      "Hiii \n",
+      "\tThis is AI msg.Inviting you for the seminar on AI @Hyd.\n",
+      "                  Thanking you.\n",
+      "Hiii \n",
+      "\tThis is AI msg.Inviting you for the seminar on AI @Hyd.\n",
+      "                  Thanking you.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import smtplib\n",
+    "\n",
+    "from string import Template\n",
+    "\n",
+    "from email.mime.multipart import MIMEMultipart\n",
+    "from email.mime.text import MIMEText\n",
+    "\n",
+    "MY_ADDRESS = 'vnr2k15cse2@gmail.com'\n",
+    "PASSWORD = 'vnr2k15cse2'\n",
+    "\n",
+    "def get_contacts(filename):\n",
+    "    \"\"\"\n",
+    "    Return two lists names, emails containing names and email addresses\n",
+    "    read from a file specified by filename.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    names = []\n",
+    "    emails = []\n",
+    "    with open(filename, mode='r', encoding='utf-8') as contacts_file:\n",
+    "        for a_contact in contacts_file:\n",
+    "            names.append(a_contact.split()[0])\n",
+    "            emails.append(a_contact.split()[1])\n",
+    "    return names, emails\n",
+    "\n",
+    "def read_template(filename):\n",
+    "    \"\"\"\n",
+    "    Returns a Template object comprising the contents of the \n",
+    "    file specified by filename.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    with open(filename, 'r', encoding='utf-8') as template_file:\n",
+    "        template_file_content = template_file.read()\n",
+    "    return Template(template_file_content)\n",
+    "\n",
+    "def main():\n",
+    "    names, emails = get_contacts('mycontacts.txt') # read contacts\n",
+    "    message_template = read_template('message.txt')\n",
+    "\n",
+    "    # set up the SMTP server\n",
+    "    s = smtplib.SMTP(host='smtp.gmail.com', port=587)\n",
+    "    s.starttls()\n",
+    "    s.login(MY_ADDRESS, PASSWORD)\n",
+    "\n",
+    "    # For each contact, send the email:\n",
+    "    for name, email in zip(names, emails):\n",
+    "        msg = MIMEMultipart()       # create a message\n",
+    "\n",
+    "        # add in the actual person name to the message template\n",
+    "        message = message_template.substitute(PERSON_NAME=name.title())\n",
+    "\n",
+    "        # Prints out the message body for our sake\n",
+    "        print(message)\n",
+    "\n",
+    "        # setup the parameters of the message\n",
+    "        msg['From']=MY_ADDRESS\n",
+    "        msg['To']=email\n",
+    "        msg['Subject']=\"Testing\"\n",
+    "        \n",
+    "        # add in the message body\n",
+    "        msg.attach(MIMEText(message, 'plain'))\n",
+    "        \n",
+    "        # send the message via the server set up earlier.\n",
+    "        s.send_message(msg)\n",
+    "        del msg\n",
+    "        \n",
+    "    # Terminate the SMTP session and close the connection\n",
+    "    s.quit()\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
   },
   {
    "cell_type": "code",
